[profile.release]
panic = 'unwind'

[build-dependencies]
vergen = '3'

[package]
authors = ['Parity Technologies <admin@parity.io>']
build = 'build.rs'
edition = '2018'
name = 'poker'
version = '2.0.0'

[[bin]]
name = 'poker'
path = 'src/main.rs'

[workspace]
members = [ "runtime" ]

[dependencies]
derive_more = "0.14.0"
exit-future = '0.1'
futures = '0.1'
log = '0.4'
parity-codec = '4.1.1'
parking_lot = '0.8.0'
tokio = '0.1'
trie-root = '0.14.0'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = '0bc753ffd490e741f4590ce38511b7d90ddb0ee6'

[dependencies.ctrlc]
features = ['termination']
version = '3.0'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = '0bc753ffd490e741f4590ce38511b7d90ddb0ee6'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
rev = '0bc753ffd490e741f4590ce38511b7d90ddb0ee6'

[dependencies.poker-runtime]
path = 'runtime'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '0bc753ffd490e741f4590ce38511b7d90ddb0ee6'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
rev = '0bc753ffd490e741f4590ce38511b7d90ddb0ee6'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = '0bc753ffd490e741f4590ce38511b7d90ddb0ee6'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = '0bc753ffd490e741f4590ce38511b7d90ddb0ee6'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = '0bc753ffd490e741f4590ce38511b7d90ddb0ee6'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = '0bc753ffd490e741f4590ce38511b7d90ddb0ee6'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
rev = '0bc753ffd490e741f4590ce38511b7d90ddb0ee6'

[dependencies.consensus]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura'
rev = '0bc753ffd490e741f4590ce38511b7d90ddb0ee6'
