[package]
authors = ["Anonymous"]
edition = '2018'
name = 'poker-runtime'
version = '2.0.0'

[features]
default = ["std"]
std = [
	"parity-codec/std",
	"client/std",
	"rstd/std",
	"runtime-io/std",
	"support/std",
	"balances/std",
	"executive/std",
	"aura/std",
	"indices/std",
	"primitives/std",
	"runtime-primitives/std",
	"system/std",
	"timestamp/std",
	"sudo/std",
	"version/std",
	"serde",
	"safe-mix/std",
	"consensus-aura/std",
	"offchain-primitives/std",
]
no_std = []

[dependencies.aura]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-aura'
rev = '0bc753ffd490e741f4590ce38511b7d90ddb0ee6'

[dependencies.balances]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-balances'
rev = '0bc753ffd490e741f4590ce38511b7d90ddb0ee6'

[dependencies.client]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-client'
rev = '0bc753ffd490e741f4590ce38511b7d90ddb0ee6'

[dependencies.executive]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-executive'
rev = '0bc753ffd490e741f4590ce38511b7d90ddb0ee6'

[dependencies.indices]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-indices'
rev = '0bc753ffd490e741f4590ce38511b7d90ddb0ee6'

[dependencies.offchain-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-offchain-primitives'
rev = '0bc753ffd490e741f4590ce38511b7d90ddb0ee6'

[dependencies.parity-codec]
default-features = false
features = ['derive']
version = '4.1.1'

[dependencies.primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '0bc753ffd490e741f4590ce38511b7d90ddb0ee6'

[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
rev = '0bc753ffd490e741f4590ce38511b7d90ddb0ee6'

[dependencies.runtime-io]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = '0bc753ffd490e741f4590ce38511b7d90ddb0ee6'

[dependencies.runtime-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
rev = '0bc753ffd490e741f4590ce38511b7d90ddb0ee6'

[dependencies.safe-mix]
default-features = false
version = '1.0'

[dependencies.serde]
optional = true
version = '1.0'
features = ['derive']

[dependencies.sudo]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-sudo'
rev = '0bc753ffd490e741f4590ce38511b7d90ddb0ee6'

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
rev = '0bc753ffd490e741f4590ce38511b7d90ddb0ee6'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
rev = '0bc753ffd490e741f4590ce38511b7d90ddb0ee6'

[dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-timestamp'
rev = '0bc753ffd490e741f4590ce38511b7d90ddb0ee6'

[dependencies.version]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-version'
rev = '0bc753ffd490e741f4590ce38511b7d90ddb0ee6'

[dependencies.consensus-aura]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura-primitives'
rev = '0bc753ffd490e741f4590ce38511b7d90ddb0ee6'

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.2" }

